# chipper

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  CPackConfig.txt  README.md  index.html  params.json
data/testing/: saxova_in_vivo_mhc_1_ligands_dataset.csv
models/: lr.model  svc.model
py/: create_chipper_model.ipynb
src/: .gitignore  CMakeLists.txt  aa_props.c  chipper.c  chipper.h  chipper.model  kseq.h  output.h  output_fastq.c  output_netchop.c  predict_cleavage.c  project.h.in  util.c  util.h  version.h.in
tests/: CMakeLists.txt  minunit.h  test.fa  test_aa_props.c  test_netchop.txt  test_netchop_short.txt  test_predict_cleavage.c
